add tex changes

--- a/trialverse/tutorials/nma-tutorial.tex
+++ b/trialverse/tutorials/nma-tutorial.tex
@@ -227,7 +227,7 @@ Next, click 'Add intervention' (Figure~\ref{fig:addIntervention}).
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=0.7\textwidth]{img/addIntervention.png}
-  \caption{Creating an evidence network.}
+  \caption{Adding an intervention to the analysis project.}
 \label{fig:addIntervention}
 \end{figure}
 
